# netherland

./: .$diagram.drawio.bkp  .$diagram.drawio.dtmp  .gitignore  README.md  diagram.drawio  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml
data/: morris_constants.toml
docs/: timestep_computation.md
notebooks/: single_cell.ipynb
src/: biomass.py  cell.py  constants.py  data.py  layers.py  live.py  marsh.py  sediment.py  stock.py  validators.py
tests/: cell_test.py  constants_test.py  live_test.py  sediment_test.py  workflow_test.py
